<resources>
    <string name="app_name">Instagram First Page</string>
    <string name="your_story">Your Story</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="_1_hour_ago">1 hour ago</string>
    <string name="liked_by_me">Liked by Me</string>
    <string name="live">live</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="add_comment">Add comment…</string>
    <string name="quantity_of_comments">Quantity of comments</string>
    <string name="pagename">PageName</string>
</resources>