<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/addFragment"
        android:icon="@drawable/ic_plus"
        android:title="@string/add" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/notifications" />
    <item
        android:id="@+id/profileFragment"
        android:actionLayout="@layout/menu_profile_layout"
        android:title="@string/profile" />
</menu>